# react-native-vision-camera-text-scanner

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  VisionCameraTextScanner.podspec  nitro.json  package-lock.json  package.json  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  fix-prefab.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/camera/textrecognizer/: HybridTextRecognizer.kt  HybridTextRecognizerFactory.kt  HybridTextRecognizerOutput.kt  HybridTextRecognizerResult.kt  NitroVisionCameraTextScannerPackage.kt
android/src/main/java/com/margelo/nitro/camera/textrecognizer/extensions/: HybridFrameSpec+toInputImage.kt
ios/: HybridTextRecognizer.swift  HybridTextRecognizerFactory.swift  HybridTextRecognizerOutput.swift  HybridTextRecognizerResult.swift
ios/Extensions/: Orientation+Extensions.swift
lib/: factory.d.ts  factory.js  index.d.ts  useTextRecognizer.d.ts  useTextRecognizer.js  useTextRecognizerOutput.d.ts
lib/specs/: Common.d.ts  TextRecognizer.nitro.d.ts  TextRecognizerOutputResolution.d.ts
lib/views/: TextScanner.d.ts
src/: factory.js  factory.ts  index.ts  useTextRecognizer.ts  useTextRecognizerOutput.js  useTextRecognizerOutput.ts
src/specs/: Common.ts  TextRecognizer.nitro.ts  TextRecognizerOutputResolution.ts
src/views/: TextScanner.js  TextScanner.tsx
